--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "lottie-react": "^2.4.0",
     "next": "14.2.4",
     "react": "^18",
